# camera_calibration

./: .gitignore  CMakeLists.txt  README.md  calibration.cpp  functions.cpp  functions.h  main.cpp  spot_centroid.cpp
calibration/include/: calibration.h  config.h  exceptions.h  functions.h  laser_detection.h  matrix_operations.h
calibration/src/: calibration.cpp  functions.cpp  laser_detection.cpp  laser_spot.cpp  main.cpp  matrix_operations.cpp
data/configs/: homography.xml
examples/: contours.cpp  diameter_centroid.cpp  display_image.cpp  find_contours.cpp  test_calibration.cpp  test_tool.cpp  uart_read.cpp  video_capture.cpp
laser_tool/include/: config.h  laser_detector.h  laser_spot.h  matrix_operations.h  shared_settings.h
laser_tool/src/: laser_detector.cpp  matrix_operations.cpp
